[package]
name = "async-task-executor"
version = "0.1.0"
edition = "2021"
authors = ["Jaemin Kim <geminik23@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/geminik23/async-task-executor"
description = "A lightweight Rust library for building extensible asynchronous task executors, designed for handling large-scale multitasking in server environments."


[dependencies]
async-std = {  veresion = "1.12" , features = ["attributes"]}
async-trait = "0.1"


[lib]
name = "async_taskex"
path = "src/lib.rs"
